--- a/cxtruecolor.html
+++ b/cxtruecolor.html
@@ -952,8 +952,7 @@ function main() {
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>getcxTrueColorSet</p>
-<p>this function fills the global cxTrueCol seq with truecolor values and needs to be run once if truecolor functiona   ## now all cxtruecolor stuff needs a call to</p>
-<p>getCxTrueColorSet() and compilation with -d:cxTrueCol then it will work like expectedlity exceeding stdlib support required see cx.nim if it is currently enabled for this version of the library </p>
+<p>this function fills the global cxTrueCol seq with truecolor values now all cxtruecolor stuff needs a call to getCxTrueColorSet() and compilation with -d:cxTrueCol then it will work like expected </p>
 
 
 </dd>
@@ -1024,7 +1023,7 @@ showCxTrueColorPalette
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-09 13:29:32 UTC</small>
+        <small>Made with Nim. Generated: 2019-04-14 05:43:35 UTC</small>
       </div>
     </div>
   </div>
