--- a/cxprint.html
+++ b/cxprint.html
@@ -815,7 +815,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#print%2CT%2Cstring%2CBackgroundColor%2Cint%2Cbool%2Cbool%2Cset%5BStyle%5D%2Cstring"
+      <li><a class="reference" href="#printf%2Ccstring"
+    title="printf(formatStr: cstring)"><wbr />printf<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#print%2CT%2Cstring%2CBackgroundColor%2Cint%2Cbool%2Cbool%2Cset%5BStyle%5D%2Cstring"
     title="print[T](astring: T; fgr: string = termwhite; bgr: BackgroundColor = bgBlack;
          xpos: int = 0; fitLine: bool = false; centered: bool = false;
          styled: set[Style] = {}; substr: string = &quot;&quot;)"><wbr />print<span class="attachedType"></span></a></li>
@@ -990,7 +992,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-04-08
+Latest      : 2019-04-14
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1010,6 +1012,14 @@ Note        : some parts are experimental, the future aim will be
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
+<a id="printf,cstring"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#printf%2Ccstring"><span class="Identifier">printf</span></a><span class="Other">(</span><span class="Identifier">formatStr</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">importc</span><span class="Other">,</span> <span class="Identifier">header</span><span class="Other">:</span> <span class="StringLit">&quot;&lt;stdio.h&gt;&quot;</span><span class="Other">,</span> <span class="Identifier">varargs</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+<p>printf</p>
+<p>make C printf function available</p>
+<pre class="listing"><span class="Identifier">printf</span><span class="Punctuation">(</span><span class="StringLit">&quot;This works %s and this %d,too &quot;</span><span class="Punctuation">,</span> <span class="StringLit">&quot;as expected&quot;</span> <span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre>
+
+</dd>
 <a id="print,T,string,BackgroundColor,int,bool,bool,set[Style],string"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#print%2CT%2Cstring%2CBackgroundColor%2Cint%2Cbool%2Cbool%2Cset%5BStyle%5D%2Cstring"><span class="Identifier">print</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">fgr</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">bgr</span><span class="Other">:</span> <span class="Identifier">BackgroundColor</span> <span class="Other">=</span> <span class="Identifier">bgBlack</span><span class="Other">;</span>
              <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">fitLine</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span>
@@ -1186,7 +1196,7 @@ Colornames supported for background color: BackGroundColors
 
 the old print routine with backgroundcolor set to black only  ,
 
-required by printfont() , printBiCol2 and printLnBiCol2
+required by printfont ,printLn2 , printBiCol2 and printLnBiCol2
 
 basically similar to terminal.nim styledWriteLine with more functionality
 
@@ -1493,7 +1503,7 @@ forward declaration
 <p>cechoLn</p>
 <p>color echo with new line</p>
 <p>so it is easy to color your output by just replacing</p>
-<p>echo something  with   cechoLn yellowgreen,something</p>
+<p>echo something with   cechoLn yellowgreen,something</p>
 <p>in your exisiting projects.</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">cechoLn</span><span class="Punctuation">(</span><span class="Identifier">steelblue</span><span class="Punctuation">,</span><span class="StringLit">&quot;We made it in $1 hours !&quot;</span> <span class="Operator">%</span> <span class="Operator">$</span><span class="DecNumber">5</span><span class="Punctuation">)</span></pre>
@@ -1778,7 +1788,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-09 13:29:34 UTC</small>
+        <small>Made with Nim. Generated: 2019-04-14 05:43:37 UTC</small>
       </div>
     </div>
   </div>
