--- a/cx.html
+++ b/cx.html
@@ -1006,7 +1006,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2019-04-08
+Latest      : 2019-05-12
 
 Compiler    : Nim &gt;= 0.19.x devel branch
 
@@ -1253,6 +1253,8 @@ Funding     : Here are three excellent reasons :
 <dt><pre><span class="Keyword">proc</span> <a href="#makeColorTest"><span class="Identifier">makeColorTest</span></a><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
                      <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
+<p>makeColorTest</p>
+<p>testing makeColor proc </p>
 
 
 </dd>
@@ -1406,6 +1408,10 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 <dt><pre><span class="Keyword">proc</span> <a href="#showTerminalSize"><span class="Identifier">showTerminalSize</span></a><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
                         <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
+<p>showTerminalSize</p>
+<p>displays current terminal dimensions</p>
+<p>width is always available via tw</p>
+<p>height is always available via th</p>
 
 
 </dd>
@@ -1768,7 +1774,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-14 05:43:25 UTC</small>
+        <small>Made with Nim. Generated: 2019-05-13 02:16:07 UTC</small>
       </div>
     </div>
   </div>
