--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1095,7 +1095,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-04-14
+Latest      : 2019-06-12
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1398,7 +1398,7 @@ rndSample returns one rand sample from a sequence
 <dd>
 <p>ff2</p>
 <p>format int or float to string showing thousand separator and desired decimal places</p>
-<p>ff2(12345,0)   ==&gt; 12,345     # display an integer with thousands seperator as we know it ff2(12345,1)   ==&gt; 12,345.0   # display an integer but like a float with 1 decimal place ff2(12345,2)   ==&gt; 12,345.00  # display an integer but like a float with 2 decimal places ff2(12.6789,2) ==&gt; 12.67      # displays the float with decimal places ff2(12.3,4)    ==&gt; 12.3000    # displkays the float with 4 decimal places</p>
+<p>ff2(12345,0)   ==&gt; 12,345     # display an integer with thousands seperator as we know it ff2(12345,1)   ==&gt; 12,345.0   # display an integer but like a float with 1 decimal place ff2(12345,2)   ==&gt; 12,345.00  # display an integer but like a float with 2 decimal places ff2(12.6789,2) ==&gt; 12.67      # display the float with decimal places ff2(12.3,4)    ==&gt; 12.3000    # display the float with 4 decimal places</p>
 <p>precision is after comma given by n with default set to 3</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 
@@ -2107,7 +2107,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-14 05:43:29 UTC</small>
+        <small>Made with Nim. Generated: 2019-05-13 02:16:11 UTC</small>
       </div>
     </div>
   </div>
