--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -945,6 +945,9 @@ function main() {
 <dt><pre><span class="Keyword">proc</span> <a href="#cxPortCheck%2Cstring"><span class="Identifier">cxPortCheck</span></a><span class="Other">(</span><span class="Identifier">cmd</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;lsof -i&quot;</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span>
     <span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
+<p>cxPortCheck</p>
+<p>runs a linux system command to see what the ports are listening to</p>
+<p>if no or partial output at all run your program with sudo </p>
 
 
 </dd>
@@ -1045,7 +1048,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-14 05:43:32 UTC</small>
+        <small>Made with Nim. Generated: 2019-05-13 02:16:14 UTC</small>
       </div>
     </div>
   </div>
