--- a/cxutils.html
+++ b/cxutils.html
@@ -1589,7 +1589,12 @@ spiralBoxy2   uses boxy2
 <dt><pre><span class="Keyword">proc</span> <a href="#showEmojisSmall"><span class="Identifier">showEmojisSmall</span></a><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
                        <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-
+<p>showEmojisSmall</p>
+<p>show a table of small emojis</p>
+<p>Example</p>
+<pre class="listing"><span class="Identifier">showEmojisSmall</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Keyword">let</span> <span class="Identifier">es</span> <span class="Operator">=</span> <span class="Identifier">getemojisSmall</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span><span class="DecNumber">10</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="Punctuation">(</span><span class="Identifier">es</span><span class="Punctuation">[</span><span class="DecNumber">197</span><span class="Punctuation">]</span> <span class="Operator">&amp;</span> <span class="Identifier">es</span><span class="Punctuation">[</span><span class="DecNumber">244</span><span class="Punctuation">]</span> <span class="Operator">&amp;</span> <span class="Identifier">es</span><span class="Punctuation">[</span><span class="DecNumber">231</span><span class="Punctuation">]</span> <span class="Punctuation">)</span> <span class="Operator">*</span> <span class="DecNumber">20</span><span class="Punctuation">,</span><span class="Identifier">rndcol</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <a id="genMacAddress"></a>
@@ -1722,7 +1727,7 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-14 05:43:27 UTC</small>
+        <small>Made with Nim. Generated: 2019-05-13 02:16:09 UTC</small>
       </div>
     </div>
   </div>
