--- a/cxstats.html
+++ b/cxstats.html
@@ -872,7 +872,7 @@ Description : provides some functions pertaining to statistcs and calculations</
 
 <span class="Keyword">var</span> <span class="Identifier">rsa</span><span class="Punctuation">:</span><span class="Identifier">Runningstat</span>
 <span class="Keyword">var</span> <span class="Identifier">rsb</span><span class="Punctuation">:</span><span class="Identifier">Runningstat</span>
-<span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="FloatNumber">1.</span><span class="Operator">.</span> <span class="DecNumber">100</span><span class="Punctuation">:</span>
+<span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="DecNumber">1</span> <span class="Operator">..</span> <span class="DecNumber">100</span><span class="Punctuation">:</span>
    <span class="Identifier">cleanscreen</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
    <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span>
    <span class="Identifier">rsa</span><span class="Operator">.</span><span class="Identifier">clear</span>
@@ -957,7 +957,7 @@ Description : provides some functions pertaining to statistcs and calculations</
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-05-17 03:56:46 UTC</small>
+        <small>Made with Nim. Generated: 2019-05-17 14:05:42 UTC</small>
       </div>
     </div>
   </div>
