--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1000,7 +1000,7 @@ function main() {
   <a class="reference reference-toplevel" href="#17" id="67">Macros</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#styledEchoPrint.m%2Cvarargs%5Buntyped%5D"
-    title="styledEchoPrint(m: varargs[untyped]): typed"><wbr />styled<wbr />Echo<wbr />Print<span class="attachedType"></span></a></li>
+    title="styledEchoPrint(m: varargs[untyped]): untyped"><wbr />styled<wbr />Echo<wbr />Print<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#procName.m%2Cuntyped"
     title="procName(x: untyped): untyped"><wbr />proc<wbr />Name<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#toEnum.m%2Cstatic%5Bstring%5D"
@@ -1076,7 +1076,7 @@ function main() {
   <li><a class="reference" href="#currentLine.t"
     title="currentLine()"><wbr />current<wbr />Line<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#hdx.t%2Ctyped%2Cstring%2Cint%2Cint"
-    title="hdx(code: typed; frm: string = &quot;+&quot;; width: int = tw; nxpos: int = 0): typed"><wbr />hdx<span class="attachedType"></span></a></li>
+    title="hdx(code: typed; frm: string = &quot;+&quot;; width: int = tw; nxpos: int = 0): void"><wbr />hdx<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -1773,9 +1773,9 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <h1><a class="toc-backref" href="#17">Macros</a></h1>
 <dl class="item">
 <a id="styledEchoPrint.m,varargs[untyped]"></a>
-<dt><pre><span class="Keyword">macro</span> <a href="#styledEchoPrint.m%2Cvarargs%5Buntyped%5D"><span class="Identifier">styledEchoPrint</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">typed</span></pre></dt>
+<dt><pre><span class="Keyword">macro</span> <a href="#styledEchoPrint.m%2Cvarargs%5Buntyped%5D"><span class="Identifier">styledEchoPrint</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">untyped</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
 <dd>
-partially lifted from an earler macro in terminal.nim and removed new line improvements suggested by araq to avoid the now deprecated callsite()
+partially lifted from an earler macro in terminal.nim and removed new line improvements suggested by araq to avoid the now deprecated callsite() maybe fails again ??? 2019-05-26  args not processed as before ???
 
 </dd>
 <a id="procName.m,untyped"></a>
@@ -2093,7 +2093,7 @@ returns a colorpalette which can be used to iterate over</pre>
 
 </dd>
 <a id="hdx.t,typed,string,int,int"></a>
-<dt><pre><span class="Keyword">template</span> <a href="#hdx.t%2Ctyped%2Cstring%2Cint%2Cint"><span class="Identifier">hdx</span></a><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">typed</span><span class="Other">;</span> <span class="Identifier">frm</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;+&quot;</span><span class="Other">;</span> <span class="Identifier">width</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">nxpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">typed</span></pre></dt>
+<dt><pre><span class="Keyword">template</span> <a href="#hdx.t%2Ctyped%2Cstring%2Cint%2Cint"><span class="Identifier">hdx</span></a><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">typed</span><span class="Other">;</span> <span class="Identifier">frm</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;+&quot;</span><span class="Other">;</span> <span class="Identifier">width</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">nxpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span></pre></dt>
 <dd>
 <p>hdx</p>
 <p>a simple sandwich frame made with + default or any string passed in</p>
@@ -2111,7 +2111,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-05-17 14:05:33 UTC</small>
+        <small>Made with Nim. Generated: 2019-05-31 10:44:29 UTC</small>
       </div>
     </div>
   </div>
