--- a/cxconsts.html
+++ b/cxconsts.html
@@ -1503,6 +1503,8 @@ function main() {
     title="cxBright = {styleBright}"><wbr />cx<wbr />Bright<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxReverseBright"
     title="cxReverseBright = {styleReverse, styleBright}"><wbr />cx<wbr />Reverse<wbr />Bright<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#cxBlink"
+    title="cxBlink = {styleBlink}"><wbr />cx<wbr />Blink<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#efb1"
     title="efb1 = &quot;▀&quot;"><wbr />efb1<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#efb2"
@@ -5175,6 +5177,12 @@ __  #
 </dd>
 <a id="cxReverseBright"></a>
 <dt><pre><a href="cxconsts.html#cxReverseBright"><span class="Identifier">cxReverseBright</span></a> <span class="Other">=</span> <span class="Other">{</span><span class="DecNumber">styleReverse</span><span class="Other">,</span> <span class="DecNumber">styleBright</span><span class="Other">}</span></pre></dt>
+<dd>
+
+
+</dd>
+<a id="cxBlink"></a>
+<dt><pre><a href="cxconsts.html#cxBlink"><span class="Identifier">cxBlink</span></a> <span class="Other">=</span> <span class="Other">{</span><span class="DecNumber">styleBlink</span><span class="Other">}</span></pre></dt>
 <dd>
 
 
@@ -10205,7 +10213,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-05-31 14:11:35 UTC</small>
+        <small>Made with Nim. Generated: 2019-06-01 13:22:52 UTC</small>
       </div>
     </div>
   </div>
