--- a/cxconsts.html
+++ b/cxconsts.html
@@ -4403,6 +4403,8 @@ __  #
     title="sly = [&quot;&quot;&quot;_   _ &quot;&quot;&quot;, &quot;&quot;&quot; \_/ &quot;&quot;&quot;, &quot;&quot;&quot;  |   &quot;&quot;&quot;]"><wbr />sly<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#slz"
     title="slz = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;  /  &quot;&quot;&quot;, &quot;&quot;&quot; /__&quot;&quot;&quot;]"><wbr />slz<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#sl1"
+    title="sl1 = [&quot;&quot;&quot; _&quot;&quot;&quot;, &quot;&quot;&quot;/|&quot;&quot;&quot;, &quot;&quot;&quot; |&quot;&quot;&quot;]"><wbr />sl1<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#sl6"
     title="sl6 = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|__ &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;]"><wbr />sl6<span class="attachedType"></span></a></li>
 
@@ -10170,6 +10172,12 @@ __  #
 
 
 </dd>
+<a id="sl1"></a>
+<dt><pre><a href="cxconsts.html#sl1"><span class="Identifier">sl1</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="StringLit">&quot;&quot;&quot; _&quot;&quot;&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;&quot;&quot;/|&quot;&quot;&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;&quot;&quot; |&quot;&quot;&quot;</span><span class="Other">]</span></pre></dt>
+<dd>
+
+
+</dd>
 <a id="sl6"></a>
 <dt><pre><a href="cxconsts.html#sl6"><span class="Identifier">sl6</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="StringLit">&quot;&quot;&quot; __ &quot;&quot;&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;&quot;&quot;|__ &quot;&quot;&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;&quot;&quot;|__| &quot;&quot;&quot;</span><span class="Other">]</span></pre></dt>
 <dd>
@@ -10203,7 +10211,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-06-02 05:57:04 UTC</small>
+        <small>Made with Nim. Generated: 2019-06-03 04:44:44 UTC</small>
       </div>
     </div>
   </div>
